--- a/projectnew.html
+++ b/projectnew.html
@@ -2,14 +2,14 @@
 <head>
  <title>Mobile and Technology</title>
 </head>
-<body background="projimage.jpg">
+<body background="grey.jpg">
     <header>
-        <h1>Mobile and Technology</h1>
+        <h1>Tech we</h1>
     </header>
     <style>
         body {
     font-family: Arial;
-    background-image:projimage.jpg;
+    background-image:grey.jpg;
 }
 header {  
     background-color: black;
@@ -39,7 +39,7 @@ main {
 .blog-card {
     border: 1px solid black;
     padding: 20px;
-    background-color:skyblue;
+    background-color:grey;
 }
 
 img {
@@ -95,7 +95,7 @@ footer {
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Mobile and Technology</p>
+        <p>&copy; 2023 Tech we</p>
     </footer>
 </body>
 </html>
